welcome.lessons.welcome.array.averagevalue.AverageValue.scala.error
averageValue:7: error: object Int is not a member of package math
	math.Int(x);
             ^